# cmake-cc-tutorials

./: README.md
2_second_tutorial_scripting/: CMakeLists.txt
2_second_tutorial_scripting/hello-exe/: CMakeLists.txt  main.cpp
2_second_tutorial_scripting/say-hello/: CMakeLists.txt
3_third_tutorial_importing_tensorflow/: CMakeLists.txt
4_fourth_using_file_variable/hello-exe/: main.cpp
4_fourth_using_library_class_variable/say-hello/src/say-hello/: hello.hpp
5_using_threads_in_c++/: CMakeLists.txt  README.md
5_using_threads_in_c++/hello-exe/: CMakeLists.txt  main.cpp
6. boost_examples/1. simple_synchronous_server_client/: README.md  server.cpp  serverexample
6. boost_examples/2. simple_asynchronous_server_client/: CMakeLists.txt  README.md  clientexample  server.cpp
6. boost_examples/3. exceptions/: README.md  build.sh  client.cpp  clientexample  serverexample
7. poco_examples/: CMakeLists.txt  main.cpp
8_using_mysql/: CMakeLists.txt  README.md
8_using_mysql/hello-exe/: CMakeLists.txt  main.cpp
first_tutorial_running_cmake/: CMakeLists.txt
first_tutorial_running_cmake/say-hello/src/say-hello/: hello.cpp  hello.hpp
fourth_using_file_variable/say-hello/src/say-hello/: hello.cpp
third_tutorial_importing_tensorflow/: CMakeLists.txt  myapp  run.sh
third_tutorial_importing_tensorflow/src/: CMakeLists.txt  main.cpp
